# parallel_gpu_final

./: .gitattributes  .gitignore  README.txt  requirements.txt
CODE/JacobiSetComputation-master/: CMakeLists.txt  test_torus_jacobi.txt
CODE/mycode/: CMakeLists.txt  DEVELOPMENT_LOG.md  benchmark_jacobi.py  build_cuda_wsl.sh  compare_jacobi.py  fix_detri_download.sh  fix_detri_layout.sh  jacobi_cuda.cu  jacobi_gpu.h  jacobi_to_vtk.py  main_cuda.cpp  setup_deps_wsl.sh  test_benchmark_smoke.sh  test_compare_jacobi.sh  test_degenerate_dump.sh  test_gpu_basic.sh  test_preprocess.sh  test_sos_fallback.sh  test_torus_gpu_sos_jacobi.vtk
docs/: 并行计算与GPU编程ByHuangzb08期末题目--2026春--新版.pptx  要求.txt
docs/analysis/: cuda_jacobi_acceptance_demo.md  cuda_jacobi_acceptance_walkthrough.md  cuda_jacobi_code_analysis.docx  cuda_jacobi_code_analysis.md  ~$da_jacobi_code_analysis.docx
docs/analysis/uselessold/: cuda_jacobi_code_analysis - 副本.docx  cuda_jacobi_code_analysis - 副本2.docx  cuda_jacobi_code_analysis copy 2.md  cuda_jacobi_code_analysis copy 3.md  cuda_jacobi_code_analysis copy.md  cuda_jacobi_core_differences.md
docs/paper/: clean_text.txt  jacobi_paper - 副本.md  jacobi_paper.md  jacobi_paper_extracted.txt  jacobi_paper_zh(新版).docx  jacobi_paper_zh.docx  pdf_text_output.txt  ~$cobi_paper_zh(新版).docx
